[book]図書保有リスト (#8)
* Feat: add error process

- Token error process
- token include user_id and nickname
- Refactoring class

related to #5

* Fix: fix the validateToken

- Fix the validateToken
- h2 database ddl-auto

related to #5

* Feat: add the BookList API

- Change the format of API response dto
- add BookList API

related to #7